[package]
name = "os"
version = "0.1.0"
authors = ["chen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
buddy_system_allocator = "0.3"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
